syntax = "proto3";

option go_package = "github.com/DmitySH/go-grpc-chat/api/chat";

package chat;

service Chat {
  rpc DoChatting(stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string content = 1;
}

message MessageResponse {
  string content = 1;
  string from_name = 2;
  string from_uuid = 3;
}
